--- a/frontend/index.html
+++ b/frontend/index.html
@@ -207,29 +207,6 @@
 
 
     </footer>
-    <!-- delete these  -->
-    <div class="result-padding" style="display: none;">
-        <div id="result"></div>
-    </div>
-
-    <!-- <div class="nav-padding"></div> -->
-
-    <div id="filter" style="display: none;"></div>
-
-    <!-- Add Product Form  -->
-    <div id="add-product-div" style="display: none;"></div>
-
-    <div id="add-product-button" style="display: none;">
-        <button id="go-button">Post New Product</button>
-    </div>
-    <div id="account-result" style="display: none;"></div>
-    <div id="edit-profile-image" style="display: none;"></div>
-    <div id="account-profile-header" style="display: none;"></div>
-    <div id="username-input" style="display: none;"></div>
-    <div id="edit-password-input" style="display: none;"></div>
-    <div id="profilepic-input" style="display: none;"></div>
-
-    <!-- delete these  -->
 
     <!-- Edit Modal -->
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -264,11 +241,11 @@
                         <br></br>
 
                     </div>
-                    <button type="button" class="btn btn-secondary edit-modal-button1"
-                        data-bs-dismiss="modal">CANCEL</button>
-                    <button id="updateProduct" name="projectButton" type="submit"
-                        class="btn btn-primary edit-modal-button2" data-bs-dismiss="modal">CONFIRM</button>
-
+                    <div class="edit-modal-buttons">
+                        <button type="button" class="btn btn-secondary edit-modal-button1" data-bs-dismiss="modal">CANCEL</button>
+                        <button id="updateProduct" name="projectButton" type="submit" class="btn btn-primary edit-modal-button2"
+                          data-bs-dismiss="modal">CONFIRM</button>
+                        </div>
                 </div>
 
             </div>
@@ -382,7 +359,7 @@
 
         <!-- <script src="js/landingpage.js"></script> -->
         <script src="js/swiper.js"></script>
-        <script src="js/script.js"></script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
