--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -199,10 +199,11 @@
             <br></br>
 
           </div>
+          <div class="edit-modal-buttons">
           <button type="button" class="btn btn-secondary edit-modal-button1" data-bs-dismiss="modal">CANCEL</button>
           <button id="updateProduct" name="projectButton" type="submit" class="btn btn-primary edit-modal-button2"
             data-bs-dismiss="modal">CONFIRM</button>
-
+          </div>
         </div>
 
       </div>
@@ -333,6 +334,8 @@
   <div id="username-input" style="display: none;"></div>
   <div id="edit-password-input" style="display: none;"></div>
   <div id="profilepic-input" style="display: none;"></div>
+  <div id="bio-input" style="display: none;"></div>
+  <div id="account-bio" style="display: none;"></div>
 
   <!-- End of Confirm Delete Modal  -->
   <!-- jquery -->
@@ -344,7 +347,7 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
 
-  <script src="js/script.js"></script>
+  <script src="js/shop.js"></script>
 </body>
 
 </html>
